package entities.hechos;

public class Multimedia {
    private String urlImagen;
}
