package entities.solicitudes;

public enum EstadoSolicitudEliminacion {
    PENDIENTE,
    ACEPTADA,
    RECHAZADA
}