@startuml
class Coleccion {
    -titulo: String
    -descripcion: String
    -fuente: FuenteEstatica
    -hechos: map<String,Hecho>
    -categoria: String
    -fechaInicio: LocalDate
    -fechaFin: LocalDate
    -criteriosDePertenencia: List<CriterioDePertenencia>
    +filtrarHechos(): void
}


interface CriterioDePertenencia {
    +cumpleCriterio(hecho: Hecho): boolean
}


class CriterioPorFecha implements CriterioDePertenencia {
    -fechaInicio: LocalDate
    -fechaFin: LocalDate
    +cumpleCriterio(hecho: Hecho): boolean
}


class CriterioPorCategoria implements CriterioDePertenencia {
    -categoria: String
    +cumpleCriterio(hecho: Hecho): boolean
}


class CriterioPorUbicacion implements CriterioDePertenencia {
    -ubicacion: Ubicacion
    +cumpleCriterio(hecho: Hecho): boolean
}


 class Ubicacion {
   -latitud: Double
   -longitud: Double
 }


class SolicitudEliminacion{
    -solicitante: Contribuyente
    -justificacion: String
    -fechaDeCreacion: LocalDateTime
    -fechaDeEvaluacion: LocalDateTime
    -estado: EstadoSolicitudEliminacion
    -hecho: Hecho
    +cambiarEstadoHecho(administrador, estado): void
    -cambiarEstadoSolicitud(estado): void
    -actualizarHistorial():void
    +validarJustificacion(justificacion): string
}

class EstadoSolicitud{
    -evaluador: Administrador
    -tiempoDeRespuesta: Integer
    -solicitudes: List<SolicitudEliminacion>

    +guardarEstado(Administrador, SolicitudEliminacion)

}

enum EstadoSolicitudEliminacion {
      PENDIENTE
      ACEPTADA
      RECHAZADA
}


class Hecho {
     -titulo: String
     -descripcion: String
     -autor: String
     -categoria: String-ubicacion: Ubicacion
     -fechaHecho: LocalDate
     -fechaCarga: LocalDate
     -origen: OrigenHecho
     -multimedia: Multimedia
     -esValido: boolean
}



class Multimedia{
    -urlImagen: string
}


enum OrigenHecho {
    CARGA_MANUAL
    DATASET
    CONTRIBUYENTE
}


class FuenteEstatica{
    -pathArchivos: List<String>;
    -EstrategiaExtraccionHechos: EstrategiaExtraccionHechos
    +obtenerHechos(): map<String,Hecho>
    +csvExtractor(hechos, pathArchivos): FuenteEstatica
}


interface EstrategiaExtraccionHechos{
    +obtenerHechosDesde(pathArchivo): map<String,Hecho>
}


class EstrategiaExtraccionHechosCSV implements EstrategiaExtraccionHechos{
    +obtenerHechosDesde(pathArchivo): map<String,Hecho>
}


class Contribuyente{
   -nombre: String
   -apellido: String
   -fechaDeNacimiento: LocalDate
   +obtenerEdad(): Integer
}



  Coleccion --> FuenteEstatica
  Coleccion --> Hecho
  OrigenHecho <-- Hecho
  Ubicacion <--* Hecho
  SolicitudEliminacion --> Hecho
  SolicitudEliminacion --> Contribuyente
   FuenteEstatica --> EstrategiaExtraccionHechos
  SolicitudEliminacion --> EstadoSolicitudEliminacion
  Coleccion -->"*" CriterioDePertenencia
  EstadoSolicitud <-- SolicitudEliminacion

  Multimedia <--* Hecho
@enduml
